--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		<meta name="author" content="Conor Smyth">
 
 		<title>CASE4 Blog</title>
-		<link href="../css/style.css" rel="stylesheet">
+		<link href="./css/style.css" rel="stylesheet">
 
 		<!-- Bootstrap -->
-		<link href="../css/bootstrap.css" rel="stylesheet">
-		<script src="../js/jquery.js"></script>
-		<script src="../js/bootstrap.min.js"></script>
+		<link href="./css/bootstrap.css" rel="stylesheet">
+		<script src="./js/jquery.js"></script>
+		<script src="./js/bootstrap.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	</head>
 
